cluster-deploy/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt-issuer"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - pyspark.de
    secretName: letsencrypt-ssl-cert
  rules:
  - host: pyspark.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-spark-master-svc
            port:
              number: 80
